# asagent

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: bootstrap.py  db_safety.py  main.py
backend/app/agent/: __init__.py  builder.py  runtime.py  streaming.py
backend/app/api/v1/: __init__.py  agents.py  apikeys.py  auth.py  chat.py  conversations.py  datasources.py  files.py  llm_configs.py  skills.py  stats.py
backend/app/content/: blocks.py  sink.py
backend/app/core/: config.py  db.py  deps.py  net.py  security.py
backend/app/datasources/: __init__.py  introspect.py  manager.py
backend/app/llm/: __init__.py  factory.py  openai_compat.py  providers.py
backend/app/models/: __init__.py
backend/app/sandbox/: __init__.py  base.py  docker.py  subprocess.py
backend/app/skills/: __init__.py  loader.py  registry.py  store.py  tools.py
backend/app/tools/: __init__.py  context.py  http_request.py  query_database.py  render.py  visualize.py
backend/tests/: conftest.py  test_blocks.py  test_conversation_authz.py  test_db_safety.py  test_skills_loader.py
deploy/: asagent.service  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.conf  run-watchdog.sh  run.sh  sandbox.Dockerfile
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/api/: http.js  index.js
frontend/src/assets/: main.css
frontend/src/components/: AppIcon.vue  BlockRenderer.vue  PageHeader.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  chat.js  ui.js
(+14 files in other folders)
