[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asagent-backend"
version = "0.1.0"
description = "asagent - general agent platform over PostgreSQL with Agent Skills (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115,<0.117",
    "uvicorn[standard]>=0.30",
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langgraph>=0.2,<0.4",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0,<3",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "sqlglot>=24",
    "pydantic-settings>=2.5",
    "PyJWT>=2.8",
    "bcrypt>=4.0,<5",
    "cryptography>=3.4",
    "orjson>=3.10",
    "nh3>=0.2",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
sandbox = ["langchain-sandbox>=0.2"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "anyio>=4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
